try deadlock as seen on https://www.reddit.com/r/java/comments/1512xuo/virtual_threads_interesting_deadlock/ - didn`t work with current java version? May be fixed?